# checkmark

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  main.yaml  main.yml
data/app/: interface_language.json
data/app_data/: data.json
data/assessments/Matematika-12/: 9_Integrálás.xlsx
data/assessments/Történelem-11/: 36_Egyetemes_kora_újkor.xlsx
data/classes/: 10-a.csv  11-bc.csv  12-a.csv  9-b.csv
docs/: checkmark_flowchart.drawio
docs/source/: conf.py  index.rst
src/checkmark/: __init__.py  __main__.py  cli.py  main.py
src/checkmark/evaluator/: decode.py  evaluate.py  evaluator_interface.py  main.py
src/checkmark/generator/: generate.py  generator_interface.py  pdf.py  question.py
src/checkmark/server/: pocket.py  routes.py
tests/: cli_test.py  conftest.py
tests/generator_tests/: conftest.py  generate_test.py  interface_validation_test.py  question_test.py
