# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project Metadata
[project]
name = "checkmark"
version = "0.1.0"
description = "A tool to automatically create and evaluate assessments."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Mizsak", email = "info@pythonvilag.hu" },
    { name = "Samu Pecsenye", email = "samu.pecsenye@gmail.com" },
]
keywords = ["assessment", "evaluation", "automatic", "checkmark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]
scripts.checkmark = "checkmark.main:main"
dependencies = [
    # Generator
    "cryptography==41.0.5",
    "fpdf2==2.5.7",
    "matplotlib==3.6.3",
    "openpyxl==3.0.10",
    "pandas==1.5.1",
    "qrcode==7.3.1",
    "requests==2.31.0",
    "ttkbootstrap==1.10.1",
    # Evaluator
    "opencv-python==4.6.0.66",
    "pillow_heif==0.13.1",
    "pyzbar==0.1.9",
    #Server
    "Flask==2.3.2",
]
[project.optional-dependencies]
dev = [
    "black",
    "furo",
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
    "sphinx-copybutton",
    "sphinx",
    "tox",
    # Stubs
    "pandas-stubs",
    "types-fpdf2",
    "types-Pillow",
    "types-requests",
]
[project.urls]
Repository = "https://github.com/daniel-mizsak/checkmark"
Homepage = "https://pythonvilag.hu/pv/projects/checkmark"

# Tools
# Black
[tool.black]
line-length = 120

# MyPy
[tool.mypy]
mypy_path = ["src", "tests"]
ignore_missing_imports = true
show_column_numbers = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_ignores = true

# Pytest
[tool.pytest.ini_options]
addopts = "--cov=checkmark"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

# Ruff
[tool.ruff]
select = ["ALL"]
line-length = 120
src = ["src", "tests"]
ignore = [
    "D203",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
    "FIX",   # flake8-fixme
    "INP",   # flake8-no-pep420
    "S104",  # hardcoded-bind-all-interfaces
    "TD002", # missing-todo-author
    "TD003", # missing-todo-link
]
[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004", # magic-value-comparison
    "S101",    # assert
]
[tool.ruff.pydocstyle]
convention = "google"


# Tox
[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py38,py312,mypy
    skip-missing-interpreters = true

    [gh]
    python =
        3.8 = py38
        3.12 = py312, mypy

    [testenv]
    deps =
        pytest
        pytest-cov
    commands = pytest {posargs:tests}

    [testenv:mypy]
    basepython = python3.12
    deps =
        mypy
    commands = mypy src tests
"""
