# Build System
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project Metadata
[project]
name = "checkmark-assistant"
version = "0.1.0"
description = "Automated assessment generator and evaluator system."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Daniel Mizsak", email = "info@pythonvilag.hu" },
    { name = "Samu Pecsenye", email = "samu.pecsenye@gmail.com" },
]
keywords = ["assessment", "evaluation", "automatic", "checkmark"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]
dependencies = [
    # Generator
    "cryptography==42.0.5",
    "fpdf2==2.7.8",
    "matplotlib==3.8.3",
    "openpyxl==3.1.2",
    "pandas==2.2.1",
    "qrcode==7.4.2",
    "requests==2.31.0",
    "ttkbootstrap==1.10.1",
    # Evaluator
    "opencv-python==4.9.0.80",
    "pillow_heif==0.15.0",
    "pyzbar==0.1.9",
    #Server
    "Flask==3.0.2",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
    "tox",
    # Stubs
    "pandas-stubs",
    "types-fpdf2",
    "types-Pillow",
    "types-requests",
]

[project.scripts]
checkmark = "checkmark.cli:main"

[project.urls]
Repository = "https://github.com/daniel-mizsak/checkmark"
Homepage = "https://pythonvilag.hu/pv/projects/checkmark"

# Tools
# Hatch
[tool.hatch.build.targets.wheel]
packages = ["src/checkmark"]

# MyPy
[tool.mypy]
ignore_missing_imports = true
pretty = true
show_column_numbers = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_ignores = true

# Pytest
[tool.pytest.ini_options]
addopts = "--cov=checkmark --cov=tests --cov-config=pyproject.toml --cov-report=term-missing --cov-report=html --cov-report=xml"
testpaths = ["tests"]

# Coverage
[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "if __name__ == '__main__':"]
omit = ["**/__main__.py"]
